force-app/main/default/objects/Transport_Registeration__c/Transport_Registeration__c.object-meta.xml
<CustomObject>
    <label>Transport Registration</label>
    <nameField>
        <displayFormat>RU-{0000}</displayFormat>
        <label>Name/BusPass Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transport Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>