force-app/main/default/objects/Transport_Registeration__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <inlineHelpText>For Student The Amount Paid is  Amount Payable For a Year And For Faculty Amount Paid is Monthly Deduction</inlineHelpText>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>