force-app/main/default/objects/Transport_Registeration__c/fields/Bus_Pass_No__c.field-meta.xml
<CustomField>
    <fullName>Bus_Pass_No__c</fullName>
    <label>Bus Pass No.-Short Distance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>