force-app/main/default/objects/Transport_Registeration__c/fields/Bus_Pass_No_ShortDistance__c.field-meta.xml
<CustomField>
    <fullName>Bus_Pass_No_ShortDistance__c</fullName>
    <label>Bus Pass  No. ShortDistance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>