force-app/main/default/objects/Transport_Registeration__c/fields/Busvalidity2__c.field-meta.xml
<CustomField>
    <fullName>Busvalidity2__c</fullName>
    <formula>Contact__r.Program_Batch__r.busValidity1__c + 335</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Busvalidity2</label>
    <type>Date</type>
</CustomField>