force-app/main/default/objects/Transport_Registeration__c/fields/BusValidity__c.field-meta.xml
<CustomField>
    <fullName>BusValidity__c</fullName>
    <formula>Contact__r.Program_Batch__r.Bus_Validity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BusValidity</label>
    <type>Date</type>
</CustomField>