force-app/main/default/objects/Transport_Registeration__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Payment Pending</fullName>
                <default>true</default>
                <label>Payment Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>