force-app/main/default/objects/Transport_Registeration__c/fields/Reva_Transport__c.field-meta.xml
<CustomField>
    <fullName>Reva_Transport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REVA Transport</label>
    <referenceTo>Reva_Transport__c</referenceTo>
    <relationshipLabel>Transport Registrations</relationshipLabel>
    <relationshipName>Transport_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>