force-app/main/default/objects/Transport_Registeration__c/fields/Route_Master__c.field-meta.xml
<CustomField>
    <fullName>Route_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Master</label>
    <referenceTo>RTR_Route_Master__c</referenceTo>
    <relationshipLabel>Transport Registrations</relationshipLabel>
    <relationshipName>Transport_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>