force-app/main/default/objects/Transport_Registeration__c/fields/Route_Pick_Up_Point__c.field-meta.xml
<CustomField>
    <fullName>Route_Pick_Up_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Pick Up Point</label>
    <referenceTo>RTR_Route_Pick_Up_Point__c</referenceTo>
    <relationshipLabel>Transport Registrations</relationshipLabel>
    <relationshipName>Transport_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>