force-app/main/default/objects/Transport_Registeration__c/fields/rtr_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>rtr_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>