force-app/main/default/objects/Transport_Registeration__c/fields/rtr_Status__c.field-meta.xml
<CustomField>
    <fullName>rtr_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payment Pending</fullName>
                <default>true</default>
                <label>Payment Pending</label>
            </value>
            <value>
                <fullName>Partial Payment</fullName>
            </value>
            <value>
                <fullName>Payment Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>