force-app/main/default/objects/Transport_Registeration__c/fields/ShortDistance__c.field-meta.xml
<CustomField>
    <fullName>ShortDistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Short Distance</label>
    <type>Checkbox</type>
</CustomField>