force-app/main/default/objects/Transport_Registeration__c/fields/Valid_UpTo__c.field-meta.xml
<CustomField>
    <fullName>Valid_UpTo__c</fullName>
    <label>Valid UpTo</label>
    <type>Date</type>
</CustomField>