force-app/main/default/objects/Transport_Registeration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact__c</columns>
    <columns>Registration_Type__c</columns>
    <columns>Route_Master__c</columns>
    <columns>rtr_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Registration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
        <value>Smr</value>
    </filters>
    <label>All</label>
</ListView>