force-app/main/default/objects/Transport_Registeration__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact__c</columns>
    <columns>Registration_Type__c</columns>
    <columns>Route_Master__c</columns>
    <columns>rtr_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Registration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Registration</label>
</ListView>